--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,9 @@
                             <div class="blog-card">
                                 <img src="https://images.unsplash.com/photo-1621905251918-48416bd8575a?w=800&h=600&fit=crop" alt="Electrical Safety Tips" style="width: 100%; height: 200px; object-fit: cover;">
                                 <div class="blog-card-body">
-                                    <span class="badge bg-primary mb-2">Electrical Safety</span>
+                                    <div class="text-center mb-2">
+                                        <span class="badge bg-primary">Electrical Safety</span>
+                                    </div>
                                     <h3>10 Electrical Safety Tips for Your Home</h3>
                                     <p class="text-muted">Essential electrical safety tips every homeowner should know to protect their family and property.</p>
                                     <div class="mt-3">
@@ -103,7 +105,9 @@
                             <div class="blog-card">
                                 <img src="https://images.unsplash.com/photo-1513151233558-d860c5398176?w=800&h=600&fit=crop" alt="LED Lighting" style="width: 100%; height: 200px; object-fit: cover;">
                                 <div class="blog-card-body">
-                                    <span class="badge bg-primary mb-2">Energy Efficiency</span>
+                                    <div class="text-center mb-2">
+                                        <span class="badge bg-primary">Energy Efficiency</span>
+                                    </div>
                                     <h3>How LED Lighting Can Save You Money</h3>
                                     <p>Discover how switching to LED lighting can significantly reduce your energy bills and carbon footprint.</p>
                                     <div class="mt-3">
@@ -116,7 +120,9 @@
                             <div class="blog-card">
                                 <img src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?w=800&h=600&fit=crop" alt="Smart Home Technology" style="width: 100%; height: 200px; object-fit: cover;">
                                 <div class="blog-card-body">
-                                    <span class="badge bg-primary mb-2">Smart Home</span>
+                                    <div class="text-center mb-2">
+                                        <span class="badge bg-primary">Smart Home</span>
+                                    </div>
                                     <h3>Smart Home Technology Trends 2024</h3>
                                     <p>Explore the latest trends in smart home technology and how they can enhance your living experience.</p>
                                     <div class="mt-3">
@@ -129,7 +135,9 @@
                             <div class="blog-card">
                                 <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?w=800&h=600&fit=crop" alt="Electrical Panel" style="width: 100%; height: 200px; object-fit: cover;">
                                 <div class="blog-card-body">
-                                    <span class="badge bg-primary mb-2">Tips</span>
+                                    <div class="text-center mb-2">
+                                        <span class="badge bg-primary">Tips</span>
+                                    </div>
                                     <h3>When to Upgrade Your Electrical Panel</h3>
                                     <p>Learn the signs that indicate it's time to upgrade your electrical panel for safety and efficiency.</p>
                                     <div class="mt-3">
@@ -142,7 +150,9 @@
                             <div class="blog-card">
                                 <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&h=600&fit=crop" alt="GFCI Outlets" style="width: 100%; height: 200px; object-fit: cover;">
                                 <div class="blog-card-body">
-                                    <span class="badge bg-primary mb-2">Electrical Safety</span>
+                                    <div class="text-center mb-2">
+                                        <span class="badge bg-primary">Electrical Safety</span>
+                                    </div>
                                     <h3>Understanding GFCI Outlets</h3>
                                     <p>A comprehensive guide to GFCI outlets, why they're important, and where they should be installed.</p>
                                     <div class="mt-3">
@@ -155,7 +165,9 @@
                             <div class="blog-card">
                                 <img src="https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?w=800&h=600&fit=crop" alt="Energy Efficiency" style="width: 100%; height: 200px; object-fit: cover;">
                                 <div class="blog-card-body">
-                                    <span class="badge bg-primary mb-2">Energy Efficiency</span>
+                                    <div class="text-center mb-2">
+                                        <span class="badge bg-primary">Energy Efficiency</span>
+                                    </div>
                                     <h3>Reducing Your Home's Energy Consumption</h3>
                                     <p>Practical tips and strategies to reduce your home's energy consumption and lower utility bills.</p>
                                     <div class="mt-3">
@@ -181,7 +193,7 @@
                     <!-- Sidebar -->
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h5 class="card-title">Categories</h5>
+                            <h5 class="card-title text-center">Categories</h5>
                             <ul class="list-unstyled">
                                 <li class="mb-2"><a href="#"><i class="fas fa-arrow-right me-2"></i>Electrical Safety (12)</a></li>
                                 <li class="mb-2"><a href="#"><i class="fas fa-arrow-right me-2"></i>Energy Efficiency (8)</a></li>
@@ -192,7 +204,7 @@
                     </div>
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h5 class="card-title">Recent Posts</h5>
+                            <h5 class="card-title text-center">Recent Posts</h5>
                             <ul class="list-unstyled">
                                 <li class="mb-3">
                                     <a href="blog-details.html">10 Electrical Safety Tips for Your Home</a>
@@ -211,7 +223,7 @@
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Newsletter</h5>
+                            <h5 class="card-title text-center">Newsletter</h5>
                             <p>Subscribe to get the latest electrical tips and news.</p>
                             <form>
                                 <div class="mb-3">
