--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                         </button>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
+                        <a class="btn btn-outline-primary me-2" href="login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="register.html">Register</a>
+                        <a class="btn btn-outline-primary me-2" href="register.html">Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-primary" href="contact.html">Get a Free Quote</a>
@@ -86,17 +86,14 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 hero-content">
-                    <h1 class="display-4 fw-bold mb-4">Professional Electrical Services You Can Trust</h1>
+            <div class="row justify-content-center">
+                <div class="col-lg-10 text-center" style="position: relative; z-index: 1;">
+                    <h1 class="display-4 fw-bold mb-4">Trusted Electrical Services</h1>
                     <p class="lead mb-4">Expert electricians providing reliable, safe, and efficient electrical solutions for your home and business. Available 24/7 for emergencies.</p>
-                    <div class="d-flex gap-3 flex-wrap">
-                        <a href="contact.html" class="btn btn-light btn-lg">Get Free Quote</a>
-                        <a href="services.html" class="btn btn-outline-light btn-lg">Our Services</a>
+                    <div class="d-flex gap-3 flex-wrap justify-content-center">
+                        <a href="contact.html" class="btn btn-light btn-lg" style="position: relative; z-index: 2;">Get Free Quote</a>
+                        <a href="services.html" class="btn btn-outline-light btn-lg" style="position: relative; z-index: 2;">Our Services</a>
                     </div>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <i class="fas fa-bolt" style="font-size: 15rem; opacity: 0.3;"></i>
                 </div>
             </div>
         </div>
@@ -112,64 +109,74 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <div class="service-card">
-                        <div class="icon">
+                        <div class="icon text-center">
                             <i class="fas fa-plug"></i>
                         </div>
-                        <h3>Electrical Installation</h3>
-                        <p>Professional installation of electrical systems, wiring, outlets, and fixtures for new constructions and renovations.</p>
-                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-card">
-                        <div class="icon">
-                            <i class="fas fa-tools"></i>
-                        </div>
-                        <h3>Maintenance & Repair</h3>
-                        <p>Regular maintenance and prompt repair services to keep your electrical systems running safely and efficiently.</p>
-                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-card">
-                        <div class="icon">
-                            <i class="fas fa-exclamation-triangle"></i>
-                        </div>
-                        <h3>Emergency Services</h3>
-                        <p>24/7 emergency electrical services to handle urgent issues and ensure your safety at any time of day.</p>
-                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-card">
-                        <div class="icon">
-                            <i class="fas fa-home"></i>
-                        </div>
-                        <h3>Smart Home Solutions</h3>
-                        <p>Modern smart home automation including lighting control, security systems, and energy management.</p>
-                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-card commercial-card">
-                        <div class="icon">
-                            <i class="fas fa-building"></i>
-                        </div>
-                        <h3>Commercial Electrical</h3>
-                        <p>Complete electrical solutions for businesses, offices, retail spaces, and industrial facilities.</p>
-                        <div class="mt-auto" style="text-align: left;">
+                        <h3 class="text-center">Electrical Installation</h3>
+                        <p class="text-center">Professional installation of electrical systems, wiring, outlets, and fixtures for new constructions and renovations.</p>
+                        <div class="text-center">
                             <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="service-card">
-                        <div class="icon">
+                        <div class="icon text-center">
+                            <i class="fas fa-tools"></i>
+                        </div>
+                        <h3 class="text-center">Maintenance & Repair</h3>
+                        <p class="text-center">Regular maintenance and prompt repair services to keep your electrical systems running safely and efficiently.</p>
+                        <div class="text-center">
+                            <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-card">
+                        <div class="icon text-center">
+                            <i class="fas fa-exclamation-triangle"></i>
+                        </div>
+                        <h3 class="text-center">Emergency Services</h3>
+                        <p class="text-center">24/7 emergency electrical services to handle urgent issues and ensure your safety at any time of day.</p>
+                        <div class="text-center">
+                            <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-card">
+                        <div class="icon text-center">
+                            <i class="fas fa-home"></i>
+                        </div>
+                        <h3 class="text-center">Smart Home Solutions</h3>
+                        <p class="text-center">Modern smart home automation including lighting control, security systems, and energy management.</p>
+                        <div class="text-center">
+                            <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-card commercial-card">
+                        <div class="icon text-center">
+                            <i class="fas fa-building"></i>
+                        </div>
+                        <h3 class="text-center">Commercial Electrical</h3>
+                        <p class="text-center">Complete electrical solutions for businesses, offices, retail spaces, and industrial facilities.</p>
+                        <div class="text-center">
+                            <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-card">
+                        <div class="icon text-center">
                             <i class="fas fa-lightbulb"></i>
                         </div>
-                        <h3>LED Lighting</h3>
-                        <p>Energy-efficient LED lighting installation and upgrades to reduce costs and improve illumination.</p>
-                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                        <h3 class="text-center">LED Lighting</h3>
+                        <p class="text-center">Energy-efficient LED lighting installation and upgrades to reduce costs and improve illumination.</p>
+                        <div class="text-center">
+                            <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -231,7 +238,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="stats-box">
                         <div class="stats-counter">
-                            <span class="number" data-target="5000">0</span>
+                            <span class="number" data-target="5000">0+</span>
                             <span class="label">Projects Completed</span>
                         </div>
                     </div>
@@ -239,7 +246,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="stats-box">
                         <div class="stats-counter">
-                            <span class="number" data-target="2500">0</span>
+                            <span class="number" data-target="2500">0+</span>
                             <span class="label">Happy Clients</span>
                         </div>
                     </div>
@@ -247,7 +254,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="stats-box">
                         <div class="stats-counter">
-                            <span class="number" data-target="15">0</span>
+                            <span class="number" data-target="15">0+</span>
                             <span class="label">Years Experience</span>
                         </div>
                     </div>
@@ -255,7 +262,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="stats-box">
                         <div class="stats-counter">
-                            <span class="number" data-target="50">0</span>
+                            <span class="number" data-target="50">0+</span>
                             <span class="label">Expert Technicians</span>
                         </div>
                     </div>
@@ -363,7 +370,9 @@
                     <div class="blog-card">
                         <img src="https://images.unsplash.com/photo-1621905251918-48416bd8575a?w=800&h=600&fit=crop" alt="Electrical Safety Tips" style="width: 100%; height: 200px; object-fit: cover;">
                         <div class="blog-card-body">
-                            <span class="badge bg-primary mb-2">Electrical Safety</span>
+                            <div class="text-center mb-2">
+                                <span class="badge bg-primary">Electrical Safety</span>
+                            </div>
                             <h3>10 Electrical Safety Tips for Your Home</h3>
                             <p>Essential electrical safety tips every homeowner should know to protect their family and property.</p>
                         </div>
@@ -373,7 +382,9 @@
                     <div class="blog-card">
                         <img src="https://images.unsplash.com/photo-1513151233558-d860c5398176?w=800&h=600&fit=crop" alt="LED Lighting" style="width: 100%; height: 200px; object-fit: cover;">
                         <div class="blog-card-body">
-                            <span class="badge bg-primary mb-2">Energy Efficiency</span>
+                            <div class="text-center mb-2">
+                                <span class="badge bg-primary">Energy Efficiency</span>
+                            </div>
                             <h3>How LED Lighting Can Save You Money</h3>
                             <p>Discover how switching to LED lighting can significantly reduce your energy bills and carbon footprint.</p>
                         </div>
@@ -383,7 +394,9 @@
                     <div class="blog-card">
                         <img src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?w=800&h=600&fit=crop" alt="Smart Home Technology" style="width: 100%; height: 200px; object-fit: cover;">
                         <div class="blog-card-body">
-                            <span class="badge bg-primary mb-2">Smart Home</span>
+                            <div class="text-center mb-2">
+                                <span class="badge bg-primary">Smart Home</span>
+                            </div>
                             <h3>Smart Home Technology Trends 2024</h3>
                             <p>Explore the latest trends in smart home technology and how they can enhance your living experience.</p>
                         </div>
