--- a/service-details.html
+++ b/service-details.html
@@ -71,11 +71,11 @@
                         <div style="height: 400px; background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); border-radius: 8px; display: flex; align-items: center; justify-content: center; color: white; font-size: 5rem; margin-bottom: 2rem;">
                             <i class="fas fa-plug"></i>
                         </div>
-                        <h2>Comprehensive Electrical Installation</h2>
+                        <h2 class="text-center">Comprehensive Electrical Installation</h2>
                         <p class="lead">We provide complete electrical installation services for new constructions, renovations, and upgrades. Our licensed electricians ensure all work meets or exceeds local building codes and safety standards.</p>
                     </div>
 
-                    <h3 class="mb-3">What We Offer</h3>
+                    <h3 class="mb-3 text-center">What We Offer</h3>
                     <ul class="list-unstyled mb-4">
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i> Complete electrical wiring for new homes and buildings</li>
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i> Electrical panel installation and upgrades</li>
@@ -87,12 +87,12 @@
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i> EV charging station installation</li>
                     </ul>
 
-                    <h3 class="mb-3">Why Choose Our Installation Services</h3>
+                    <h3 class="mb-3 text-center">Why Choose Our Installation Services</h3>
                     <p>Our team of experienced electricians brings years of expertise to every installation project. We use only high-quality materials and follow best practices to ensure your electrical system is safe, reliable, and built to last.</p>
                     <p>We work closely with homeowners, contractors, and architects to ensure installations meet your specific needs and comply with all local codes and regulations.</p>
 
                     <!-- FAQ Accordion -->
-                    <h3 class="mb-3 mt-5">Frequently Asked Questions</h3>
+                    <h3 class="mb-3 mt-5 text-center">Frequently Asked Questions</h3>
                     <div class="accordion" id="faqAccordion">
                         <div class="accordion-item">
                             <h2 class="accordion-header">
@@ -136,7 +136,7 @@
                     <!-- Pricing Card -->
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h4 class="card-title">Service Pricing</h4>
+                            <h4 class="card-title text-center">Service Pricing</h4>
                             <div class="mb-3">
                                 <h5 class="text-primary">Starting at $299</h5>
                                 <p class="text-muted">Basic installation</p>
@@ -153,7 +153,7 @@
                     <!-- CTA Form -->
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Request a Quote</h4>
+                            <h4 class="card-title text-center">Request a Quote</h4>
                             <form>
                                 <div class="mb-3">
                                     <input type="text" class="form-control" placeholder="Your Name" required>
