--- a/index-niche.html
+++ b/index-niche.html
@@ -59,6 +59,18 @@
         .feature-row:last-child {
             border-bottom: none;
         }
+        
+        /* Tablet view pricing format */
+        @media (min-width: 768px) and (max-width: 1024px) {
+            .pricing-card .price small {
+                display: none;
+            }
+            .pricing-card .price::after {
+                content: " /m";
+                font-size: 3rem;
+                font-weight: 700;
+            }
+        }
     </style>
 </head>
 <body>
