--- a/login.html
+++ b/login.html
@@ -84,14 +84,14 @@
                                     <input type="password" class="form-control" id="password" required>
                                     <div class="invalid-feedback">Please provide your password.</div>
                                 </div>
-                                <div class="mb-3 form-check">
-                                    <input type="checkbox" class="form-check-input" id="remember">
-                                    <label class="form-check-label" for="remember">Remember me</label>
-                                </div>
-                                <button type="submit" class="btn btn-primary w-100 mb-3">Login</button>
-                                <div class="text-center">
+                                <div class="mb-3 d-flex justify-content-between align-items-center">
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" id="remember">
+                                        <label class="form-check-label" for="remember">Remember me</label>
+                                    </div>
                                     <a href="#" class="text-decoration-none">Forgot Password?</a>
                                 </div>
+                                <button type="submit" class="btn btn-primary w-100 mb-3">Login</button>
                                 <hr class="my-4">
                                 <div class="text-center">
                                     <p class="mb-3">Or login with</p>
