--- a/services.html
+++ b/services.html
@@ -25,16 +25,41 @@
         }
         .services-list .service-item {
             display: flex;
-            gap: 2rem;
-            padding: 2rem;
+            justify-content: center;
+            align-items: center;
+            padding: 1rem 2rem;
             border: 1px solid var(--border-color);
             border-radius: 8px;
-            margin-bottom: 1rem;
+            margin-bottom: 0.75rem;
+        }
+        .services-list .service-item > div {
+            width: 100%;
+        }
+        .services-list .service-item .icon {
+            margin-bottom: 0.5rem !important;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+        }
+        .services-list .service-item h3 {
+            margin-bottom: 0.5rem;
+            text-align: center;
+        }
+        .services-list .service-item p {
+            margin-bottom: 0.75rem;
+            text-align: center;
+        }
+        .services-list .service-item .btn {
+            display: inline-block;
+            margin: 0 auto;
+            padding: 0.375rem 0.75rem;
+            font-size: 0.875rem;
         }
         .view-toggle {
             display: flex;
             gap: 0.5rem;
             margin-bottom: 2rem;
+            margin-top: 1rem;
         }
         .view-toggle button {
             padding: 0.5rem 1rem;
@@ -118,31 +143,31 @@
             <div class="services-grid" id="servicesGrid">
                 <div class="service-card" data-category="residential">
                     <div class="icon"><i class="fas fa-plug"></i></div>
-                    <h3>Electrical Installation</h3>
+                    <h3>Installation</h3>
                     <p>Professional installation of electrical systems, wiring, outlets, and fixtures for new constructions and renovations.</p>
                     <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                 </div>
                 <div class="service-card" data-category="residential commercial">
                     <div class="icon"><i class="fas fa-tools"></i></div>
-                    <h3>Maintenance & Repair</h3>
+                    <h3>Repairs</h3>
                     <p>Regular maintenance and prompt repair services to keep your electrical systems running safely and efficiently.</p>
                     <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                 </div>
                 <div class="service-card" data-category="emergency">
                     <div class="icon"><i class="fas fa-exclamation-triangle"></i></div>
-                    <h3>Emergency Services</h3>
+                    <h3>Emergency</h3>
                     <p>24/7 emergency electrical services to handle urgent issues and ensure your safety at any time of day.</p>
                     <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                 </div>
                 <div class="service-card" data-category="smart residential">
                     <div class="icon"><i class="fas fa-home"></i></div>
-                    <h3>Smart Home Solutions</h3>
+                    <h3>Smart Home</h3>
                     <p>Modern smart home automation including lighting control, security systems, and energy management.</p>
                     <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                 </div>
                 <div class="service-card" data-category="commercial">
                     <div class="icon"><i class="fas fa-building"></i></div>
-                    <h3>Commercial Electrical</h3>
+                    <h3>Commercial</h3>
                     <p>Complete electrical solutions for businesses, offices, retail spaces, and industrial facilities.</p>
                     <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                 </div>
@@ -160,7 +185,7 @@
                 </div>
                 <div class="service-card" data-category="commercial">
                     <div class="icon"><i class="fas fa-industry"></i></div>
-                    <h3>Industrial Electrical</h3>
+                    <h3>Industrial</h3>
                     <p>Specialized electrical services for manufacturing facilities, warehouses, and industrial complexes.</p>
                     <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                 </div>
@@ -169,26 +194,66 @@
             <!-- List View -->
             <div class="services-list" id="servicesList">
                 <div class="service-item" data-category="residential">
-                    <div class="icon"><i class="fas fa-plug" style="font-size: 3rem; color: var(--primary-color);"></i></div>
-                    <div>
-                        <h3>Electrical Installation</h3>
+                    <div class="text-center">
+                        <div class="icon mb-3"><i class="fas fa-plug" style="font-size: 3rem; color: var(--primary-color);"></i></div>
+                        <h3>Installation</h3>
                         <p>Professional installation of electrical systems, wiring, outlets, and fixtures for new constructions and renovations.</p>
                         <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
                 <div class="service-item" data-category="residential commercial">
-                    <div class="icon"><i class="fas fa-tools" style="font-size: 3rem; color: var(--primary-color);"></i></div>
-                    <div>
-                        <h3>Maintenance & Repair</h3>
+                    <div class="text-center">
+                        <div class="icon mb-3"><i class="fas fa-tools" style="font-size: 3rem; color: var(--primary-color);"></i></div>
+                        <h3>Repairs</h3>
                         <p>Regular maintenance and prompt repair services to keep your electrical systems running safely and efficiently.</p>
                         <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
                 <div class="service-item" data-category="emergency">
-                    <div class="icon"><i class="fas fa-exclamation-triangle" style="font-size: 3rem; color: var(--primary-color);"></i></div>
-                    <div>
-                        <h3>Emergency Services</h3>
+                    <div class="text-center">
+                        <div class="icon mb-3"><i class="fas fa-exclamation-triangle" style="font-size: 3rem; color: var(--primary-color);"></i></div>
+                        <h3>Emergency</h3>
                         <p>24/7 emergency electrical services to handle urgent issues and ensure your safety at any time of day.</p>
+                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="service-item" data-category="smart residential">
+                    <div class="text-center">
+                        <div class="icon mb-3"><i class="fas fa-home" style="font-size: 3rem; color: var(--primary-color);"></i></div>
+                        <h3>Smart Home</h3>
+                        <p>Modern smart home automation including lighting control, security systems, and energy management.</p>
+                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="service-item" data-category="commercial">
+                    <div class="text-center">
+                        <div class="icon mb-3"><i class="fas fa-building" style="font-size: 3rem; color: var(--primary-color);"></i></div>
+                        <h3>Commercial</h3>
+                        <p>Complete electrical solutions for businesses, offices, retail spaces, and industrial facilities.</p>
+                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="service-item" data-category="residential commercial">
+                    <div class="text-center">
+                        <div class="icon mb-3"><i class="fas fa-lightbulb" style="font-size: 3rem; color: var(--primary-color);"></i></div>
+                        <h3>LED Lighting</h3>
+                        <p>Energy-efficient LED lighting installation and upgrades to reduce costs and improve illumination.</p>
+                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="service-item" data-category="residential">
+                    <div class="text-center">
+                        <div class="icon mb-3"><i class="fas fa-bolt" style="font-size: 3rem; color: var(--primary-color);"></i></div>
+                        <h3>Panel Upgrades</h3>
+                        <p>Electrical panel upgrades and replacements to meet modern power demands and improve safety.</p>
+                        <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="service-item" data-category="commercial">
+                    <div class="text-center">
+                        <div class="icon mb-3"><i class="fas fa-industry" style="font-size: 3rem; color: var(--primary-color);"></i></div>
+                        <h3>Industrial</h3>
+                        <p>Specialized electrical services for manufacturing facilities, warehouses, and industrial complexes.</p>
                         <a href="service-details.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
