--- a/blog-details.html
+++ b/blog-details.html
@@ -45,9 +45,9 @@
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto align-items-center">
-                    <li class="nav-item"><button class="theme-toggle"><i class="fas fa-moon"></i></button></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
+                    <li class="nav-item me-3"><button class="theme-toggle"><i class="fas fa-moon"></i></button></li>
+                    <li class="nav-item"><a class="btn btn-outline-primary me-2" href="login.html">Login</a></li>
+                    <li class="nav-item"><a class="btn btn-outline-primary me-2" href="register.html">Register</a></li>
                     <li class="nav-item"><a class="btn btn-primary" href="contact.html">Get a Free Quote</a></li>
                 </ul>
             </div>
