--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto align-items-center">
-                    <li class="nav-item">
+                    <li class="nav-item me-3">
                         <button class="theme-toggle" aria-label="Toggle theme">
                             <i class="fas fa-moon"></i>
                         </button>
