--- a/pricing.html
+++ b/pricing.html
@@ -14,6 +14,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+        /* Mobile view pricing format */
+        @media (max-width: 767px) {
+            .pricing-card .price small {
+                display: none;
+            }
+            .pricing-card .price::after {
+                content: " /m";
+                font-size: 3rem;
+                font-weight: 700;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
