--- a/service-details.html
+++ b/service-details.html
@@ -14,6 +14,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+        /* Mobile view fixes */
+        @media (max-width: 767px) {
+            body {
+                overflow-x: hidden;
+            }
+            
+            .container {
+                padding-left: 1rem;
+                padding-right: 1rem;
+                max-width: 100%;
+            }
+            
+            .section {
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
