--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <h2 class="mb-4 text-center">Our Mission</h2>
-                    <p class="lead">To provide safe, reliable, and professional electrical services that exceed our customers' expectations while maintaining the highest standards of quality and safety.</p>
+                    <p>To provide safe, reliable, and professional electrical services that exceed our customers' expectations while maintaining the highest standards of quality and safety.</p>
                     <p>We are committed to delivering exceptional electrical solutions for both residential and commercial clients. Our team of licensed electricians brings years of experience and expertise to every project, ensuring your electrical systems are installed, maintained, and repaired to the highest industry standards.</p>
                     <p>Customer satisfaction is at the heart of everything we do. We believe in transparent communication, fair pricing, and going above and beyond to solve your electrical challenges.</p>
                 </div>
@@ -324,11 +324,11 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>Services</h5>
                     <ul class="list-unstyled">
-                        <li><a href="service-details.html">Electrical Installation</a></li>
-                        <li><a href="service-details.html">Maintenance & Repair</a></li>
-                        <li><a href="service-details.html">Emergency Services</a></li>
-                        <li><a href="service-details.html">Smart Home Solutions</a></li>
-                        <li><a href="service-details.html">Commercial Electrical</a></li>
+                        <li><a href="service-details.html?service=1">Electrical Installation</a></li>
+                        <li><a href="service-details.html?service=2">Maintenance & Repair</a></li>
+                        <li><a href="service-details.html?service=3">Emergency Services</a></li>
+                        <li><a href="service-details.html?service=4">Smart Home Solutions</a></li>
+                        <li><a href="service-details.html?service=5">Commercial Electrical</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
