--- a/services.html
+++ b/services.html
@@ -352,11 +352,11 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>Services</h5>
                     <ul class="list-unstyled">
-                        <li><a href="service-details.html">Electrical Installation</a></li>
-                        <li><a href="service-details.html">Maintenance & Repair</a></li>
-                        <li><a href="service-details.html">Emergency Services</a></li>
-                        <li><a href="service-details.html">Smart Home Solutions</a></li>
-                        <li><a href="service-details.html">Commercial Electrical</a></li>
+                        <li><a href="service-details.html?service=1">Electrical Installation</a></li>
+                        <li><a href="service-details.html?service=2">Maintenance & Repair</a></li>
+                        <li><a href="service-details.html?service=3">Emergency Services</a></li>
+                        <li><a href="service-details.html?service=4">Smart Home Solutions</a></li>
+                        <li><a href="service-details.html?service=5">Commercial Electrical</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
