--- a/blog.html
+++ b/blog.html
@@ -55,8 +55,13 @@
             min-height: 0;
         }
         
+        /* Add spacing between date and read more button */
+        .blog-card-body > div.mt-3 {
+            margin-bottom: 1rem;
+        }
+        
         .blog-card-body .read-more-btn {
-            margin-top: 1.5rem;
+            margin-top: auto;
             align-self: flex-start;
             padding: 0.5rem 1.25rem;
             background-color: var(--primary-color);
