--- a/blog.html
+++ b/blog.html
@@ -128,7 +128,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><i class="fas fa-bolt"></i> Electrical Services</a>
+            <a class="navbar-brand" href="index.html"><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath fill='%23FFC107' d='M50 10L30 50h20v40l20-40H50V10z'/%3E%3C/svg%3E" alt="Electrical Services Logo"> Electrical Services</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -152,12 +152,12 @@
                     <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
                     <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="admin/dashboard.html">Dashboard</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item me-3"><button class="theme-toggle"><i class="fas fa-moon"></i></button></li>
                     <li class="nav-item"><a class="btn btn-outline-primary me-2" href="login.html">Login</a></li>
                     <li class="nav-item"><a class="btn btn-outline-primary me-2" href="register.html">Register</a></li>
-                    <li class="nav-item"><a class="btn btn-primary" href="contact.html">Get a Free Quote</a></li>
                 </ul>
             </div>
         </div>
@@ -370,7 +370,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <h5><i class="fas fa-bolt"></i> Electrical Services</h5>
+                    <h5><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath fill='%23FFC107' d='M50 10L30 50h20v40l20-40H50V10z'/%3E%3C/svg%3E" alt="Electrical Services Logo"> Electrical Services</h5>
                     <p>Your trusted partner for all electrical needs. We provide professional, reliable, and safe electrical services for residential and commercial properties.</p>
                     <div class="social-links mt-3">
                         <a href="#" class="me-3"><i class="fab fa-facebook"></i></a>
