--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
                             <!-- Brand Name Inside Card -->
                             <div class="text-center mb-4 pb-3 border-bottom">
                                 <a href="index.html" class="text-decoration-none" style="color: var(--text-color);">
-                                    <i class="fas fa-bolt" style="font-size: 2rem; color: var(--primary-color);"></i>
+                                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath fill='%23FFC107' d='M50 10L30 50h20v40l20-40H50V10z'/%3E%3C/svg%3E" alt="Electrical Services Logo" style="width: 48px; height: 48px;">
                                     <h3 class="mt-2 mb-0" style="font-weight: 600;">Electrical Services</h3>
                                 </a>
                             </div>
